--- a/style.css
+++ b/style.css
@@ -72,8 +72,10 @@
 }
 
 .img-avatar {
-    height: 180px;
-    width: 180px;
+    width: auto;
+    height: auto;
+    max-height: 180px;
+    max-width: 180px;
 }
 
 .name p {
@@ -87,7 +89,7 @@
     height: auto;
     width: auto;
     border: 2px solid gray;
-    margin: 0px 5px 20px 5px;
+    margin: 10px 5px;
     border-radius: 20px;
     padding: 0 20px;
 }
