--- a/style.css
+++ b/style.css
@@ -43,24 +43,29 @@ h4 {
 .banner {
     background-color: var(--main-color);
     height: 250px;
-    margin: 55px 5px 0 5px;
+    margin: 55px 55px 0 55px;
     background-size: cover;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-top: 1px solid crimson;
     border-left: 1px solid crimson;
     border-right: 1px solid crimson;
+    padding: 0 50px;
 }
 
 .about-us {
     border-bottom: 1px solid crimson;
     border-left: 1px solid crimson;
     border-right: 1px solid crimson;
-    margin: 0 5px 20px 5px;
+    margin: 0 55px 20px 55px;
     height: auto;
     padding: 5px 5px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+.btn {
+    margin: 2px 2px;
 }
 
 .profile {
@@ -99,7 +104,7 @@ h4 {
     height: auto;
     width: auto;
     border: 1px solid gray;
-    margin: 30px 5px;
+    margin: 30px 55px;
     border-radius: 5px;
     padding: 20px 20px;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
@@ -270,8 +275,14 @@ div[role="progressbar"]::before {
     margin: 0 5px;
 }
 
+.box2-int1 {
+    text-align: center;
+}
+
 .box2-int2 {
-    margin: 5px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
